--- a/example/index.html
+++ b/example/index.html
@@ -6,31 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>liteMove</title>
     <style>
-        .window {
+        .move {
+            cursor: move;
+        }
+
+        .box {
             width: 100px;
             height: 100px;
-            background: #626362;
+            border: brown 3px solid;
+            background-color: green;
         }
+
         .top {
             width: 100%;
             height: 30px;
             background-color: bisque;
-            cursor: move;
         }
     </style>
 </head>
 
 <body>
-    <div class="window">
-        <div class="top" ></div>
-        any dom moveable
+    <div class="box move" v-move>
+        移动
+    </div>
+    <div class="box">
+        <div class="top move" v-move.moveParent>移动</div>
     </div>
 </body>
 <script src="../dist/lite-move.umd.js"></script>
 <script>
-    // liteMove.toMove() 返回监听mousedown事件的处理函数，true代表移动其父元素
+    // liteMove.toMove() 返回监听mousedown事件的处理函数，true代表移动其父元素，否则只移动自己
     const movableAction = liteMove.toMove(true);
     document.querySelector('.top').addEventListener('mousedown', movableAction);
+
+    const movableAction2 = liteMove.toMove();
+    document.querySelector('.move').addEventListener('mousedown', movableAction2);
 </script>
 
 </html>
